[AB-xxx] adding modmail support for ban appeals refactoring modmail to use user objects instead of member in various places